--- a/gradle.properties
+++ b/gradle.properties
@@ -10,7 +10,7 @@ projectLeaderName=Asterios Raptis
 slash=/
 colon=:
 issuesPath=/issues
-projectDescription=Template project for create java library projects
+projectDescription=this repository provides functionality for java class Robot
 projectScmProviderDomain=github.com
 projectScmProviderUrl=https://github.com/
 projectScmGitUrlPrefix=scm:git:git:@
@@ -39,6 +39,7 @@ spotlessGradlePluginVersion=6.19.0
 # dependencies versions #
 #########################
 lombokVersion=1.18.28
+randomizerVersion=8.6
 ##############################
 # test dependencies versions #
 ##############################
