--- a/gradle/dependencies.gradle
+++ b/gradle/dependencies.gradle
@@ -2,6 +2,7 @@
 dependencies {
     compileOnly("org.projectlombok:lombok:$lombokVersion")
     annotationProcessor("org.projectlombok:lombok:$lombokVersion")
+    implementation("io.github.astrapi69:randomizer:$randomizerVersion")
     testCompileOnly("org.projectlombok:lombok:$lombokVersion")
     testAnnotationProcessor("org.projectlombok:lombok:$lombokVersion")
     testImplementation("io.github.astrapi69:silly-io:$sillyIoVersion")
