--- a/gradle.properties
+++ b/gradle.properties
@@ -1,9 +1,9 @@
 ######################
 # project properties #
 ######################
-projectVersion=1.1-SNAPSHOT
+projectVersion=2-SNAPSHOT
 groupPackage=io.github.astrapi69
-projectSourceCompatibility=11
+projectSourceCompatibility=17
 projectInceptionYear=2022
 projectHolderUsername=astrapi69
 projectLeaderName=Asterios Raptis
@@ -30,22 +30,22 @@ projectRepositoriesSnapshotsName=Sonatype Nexus Snapshots
 ###########################
 # gradle-plugins versions #
 ###########################
-gradlePluginLombokVersion=8.1.0
-gradlePluginVersionsVersion=0.47.0
+gradlePluginLombokVersion=8.3
+gradlePluginVersionsVersion=0.48.0
 licenseGradlePluginVersion=0.16.1
 grgitGradlePluginVersion=5.2.0
-spotlessGradlePluginVersion=6.19.0
+spotlessGradlePluginVersion=6.21.0
 #########################
 # dependencies versions #
 #########################
-lombokVersion=1.18.28
-randomizerVersion=8.6
+lombokVersion=1.18.30
+randomizerVersion=10.1
 ##############################
 # test dependencies versions #
 ##############################
-meanbeanVersion=3.0.0-M9
 junitJupiterExtensionsVersion=1.1
-junitJupiterVersion=5.10.0-RC1
+meanbeanVersion=3.0.0-M9
+junitJupiterVersion=5.10.0
 ##########################
 # for deploy on sonatype #
 ##########################
